static/css/style.css
@font-face {
  font-family: 'quicksandbold';
  src: url('/static/font/quicksand-bold-webfont.woff2') format('woff2'), url('/static/font/quicksand-bold-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

html {
  min-height: 100vh;
  background-color: #3c1338;
  background: linear-gradient(135deg, #8275d6 0%, #3c1338 100%);
  background-size: cover;
}

body {
  font-size: 100%;
  font-family: 'quicksandbold', sans-serif;
  color: #fff;
  overflow: hidden;
}

main {
  padding: 20px;
  max-width: 500px;
  margin: 0 auto;
}

h1,
h2 {
  font-family: 'quicksandbold', sans-serif;
  font-weight: 700;
  text-align: center;
}

h1 {
  font-size: 2.5em;
  line-height: 0.85em;
}

h1.appTitle {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  text-align: left;
}

.userInput {
  text-align: center;
  margin-top: 4em;
}

#imageIcon {
  width: 75px;
  display: inline-block;
  margin-right: 20px;
  fill: #fff;
}

.uploadBtn {
  /*display: flex;
  justify-content: center;
  align-items: center;*/
  display: inline-block;
  /*background: #ffad92;*/
  color: #513168;
  width: 60px;
  height: 60px;
  padding: 24px;
  box-sizing: content-box;
  border: none;
  font-size: 1.5em;
  font-family: 'quicksandbold';
  text-align: center;
  box-shadow: 0px 0px 50px #513168;
  border-radius: 50%;
}

#cameraIcon {
  display: inline-block;
  fill: #513168;
  width: 60px;
}

.uploadBtn .label {
  visibility: hidden;
  display: block;
  height: 0;
  width: 0;
}

#photo {
  visibility: hidden;
  width: 0;
  height: 0;
}

.overlay {
  position: absolute;
  left: 0;
  top: 100vh;
  min-height: 100vh;
  width: 100%;
  background: rgba(0, 0, 0, 0.8);
  padding: 20px;
  box-sizing: border-box;
  transition: top 0.63s ease;
  overflow-y: scroll;
  height: 1px;
}

.active {
  visibility: visible !important;
  display: block !important;
  top: 0 !important;
  left: 0 !important;
  min-height: 100vh;
}

.close {
  background: black;
  position: absolute;
  top: 20px;
  right: 20px;
  color: white;
  border: none;
}

.closeIcon {
  width: 25px;
  height: auto;
  fill: white;
}

.imageFile {
  max-width: 100%;
}

.imageTitle {
  text-align: left;
  margin-bottom: 0.5rem;
}

.imageDescription {
  border: 1px solid rgba(255, 255, 255, 0.1);
  padding: 1rem;
  background: rgba(255, 255, 255, 0.1);
}

canvas {
  position: absolute;
  left: 200vw;
}

.loadingWindow {
  display: none;
  position: absolute;
  left: 0;
  top: 0;
}

.loadingAnimation {
  display: flex;
  width: 100vw;
  height: 100vh;
  justify-content: center;
  align-items: center;
  background: rgba(0, 0, 0, 0.6);
  flex-wrap: wrap;
  align-content: center;
}

.loadingStatus {
  width: 100%;
  text-align: center;
  margin-top: 20px;
}

.loadingAnimation svg {
  max-width: 60px;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  animation-name: rotateLoop;
  animation-timing-function: linear;
}

@keyframes rotateLoop {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.st0 {
  fill: #FFFFFF;
}

.st1 {
  fill: #635662;
}

